# nerd-herd-discord-bot

./: main.py  nerd-service.py  nerd_service.py  personalized_message.txt  pyproject.toml
